manifests/demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: demoapp.sixthnode.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 80
